// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate basic 1`] = `
"node:
  id: envoy
  cluster: envoy
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50051
      listener_filters: []
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: cluster-localhost-50051
                            timeout: 600s
                        - match:
                            prefix: /test1/
                          route:
                            cluster: cluster-localhost-50051
                            timeout: 600s
                        - match:
                            prefix: /test2/
                          route:
                            cluster: cluster-localhost-50053
                            timeout: 600s
                        - match:
                            path: /
                          direct_response:
                            status: 200
                            body:
                              inline_string: ok
                      retry_policy:
                        retry_on: connect-failure,refused-stream,unavailable
                        num_retries: 3
                        per_try_timeout: 3600s
                        retry_back_off:
                          base_interval: 2s
                          max_interval: 2s
                upgrade_configs:
                  - upgrade_type: websocket
                    enabled: true
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: cluster-localhost-50051
      connect_timeout: 1.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster-localhost-50051
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50051
      http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          - max_pending_requests: 100000000
            max_requests: 100000000
    - name: cluster-localhost-50053
      connect_timeout: 1.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster-localhost-50053
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50053
      http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          - max_pending_requests: 100000000
            max_requests: 100000000
"
`;

exports[`generate cluster-tls 1`] = `
"node:
  id: envoy
  cluster: envoy
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50051
      listener_filters: []
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: cluster-localhost-50051
                            timeout: 600s
                        - match:
                            path: /
                          direct_response:
                            status: 200
                            body:
                              inline_string: ok
                      retry_policy:
                        retry_on: connect-failure,refused-stream,unavailable
                        num_retries: 3
                        per_try_timeout: 3600s
                        retry_back_off:
                          base_interval: 2s
                          max_interval: 2s
                upgrade_configs:
                  - upgrade_type: websocket
                    enabled: true
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: cluster-localhost-50051
      connect_timeout: 1.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster-localhost-50051
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50051
      http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          - max_pending_requests: 100000000
            max_requests: 100000000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': >-
            type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols:
              - h2,http/1.1
            tls_certificate_sds_secret_configs:
              - name: cluster-cert
                sds_config:
                  resource_api_version: V3
                  path_config_source:
                    path: /tmp/sds-cluster-cert.yaml
            validation_context_sds_secret_config:
              name: ca-cert
              sds_config:
                resource_api_version: V3
                path_config_source:
                  path: /tmp/sds-ca-cert.yaml
"
`;

exports[`generate cluster-tls 2`] = `
Object {
  "path": "/tmp/sds-cluster-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: cluster-cert
    tls_certificate:
      certificate_chain:
        filename: cluster-cert/cert
      private_key:
        filename: cluster-cert/key
",
}
`;

exports[`generate cluster-tls 3`] = `
Object {
  "path": "/tmp/sds-ca-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: ca-cert
    validation_context:
      trusted_ca:
        filename: ca-cert/ca
",
}
`;

exports[`generate listener-tls 1`] = `
"node:
  id: envoy
  cluster: envoy
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50051
      listener_filters: []
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': >-
                type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                  - h2,http/1.1
                tls_certificate_sds_secret_configs:
                  - name: listener-cert
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: /tmp/sds-listener-cert.yaml
                validation_context_sds_secret_config:
                  name: ca-cert
                  sds_config:
                    resource_api_version: V3
                    path_config_source:
                      path: /tmp/sds-ca-cert.yaml
          filters:
            - name: envoy.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: cluster-localhost-50051
                            timeout: 600s
                        - match:
                            path: /
                          direct_response:
                            status: 200
                            body:
                              inline_string: ok
                      retry_policy:
                        retry_on: connect-failure,refused-stream,unavailable
                        num_retries: 3
                        per_try_timeout: 3600s
                        retry_back_off:
                          base_interval: 2s
                          max_interval: 2s
                upgrade_configs:
                  - upgrade_type: websocket
                    enabled: true
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: cluster-localhost-50051
      connect_timeout: 1.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster-localhost-50051
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50051
      http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          - max_pending_requests: 100000000
            max_requests: 100000000
"
`;

exports[`generate listener-tls 2`] = `
Object {
  "path": "/tmp/sds-listener-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: listener-cert
    tls_certificate:
      certificate_chain:
        filename: listener-cert/cert
      private_key:
        filename: listener-cert/key
",
}
`;

exports[`generate listener-tls 3`] = `
Object {
  "path": "/tmp/sds-ca-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: ca-cert
    validation_context:
      trusted_ca:
        filename: ca-cert/ca
",
}
`;

exports[`generate mtls 1`] = `
"node:
  id: envoy
  cluster: envoy
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50051
      listener_filters: []
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': >-
                type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                  - h2,http/1.1
                tls_certificate_sds_secret_configs:
                  - name: listener-cert
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: /tmp/sds-listener-cert.yaml
                validation_context_sds_secret_config:
                  name: ca-cert
                  sds_config:
                    resource_api_version: V3
                    path_config_source:
                      path: /tmp/sds-ca-cert.yaml
          filters:
            - name: envoy.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: cluster-localhost-50051
                            timeout: 600s
                        - match:
                            path: /
                          direct_response:
                            status: 200
                            body:
                              inline_string: ok
                      retry_policy:
                        retry_on: connect-failure,refused-stream,unavailable
                        num_retries: 3
                        per_try_timeout: 3600s
                        retry_back_off:
                          base_interval: 2s
                          max_interval: 2s
                upgrade_configs:
                  - upgrade_type: websocket
                    enabled: true
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: cluster-localhost-50051
      connect_timeout: 1.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster-localhost-50051
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50051
      http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          - max_pending_requests: 100000000
            max_requests: 100000000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': >-
            type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols:
              - h2,http/1.1
            tls_certificate_sds_secret_configs:
              - name: cluster-cert
                sds_config:
                  resource_api_version: V3
                  path_config_source:
                    path: /tmp/sds-cluster-cert.yaml
            validation_context_sds_secret_config:
              name: ca-cert
              sds_config:
                resource_api_version: V3
                path_config_source:
                  path: /tmp/sds-ca-cert.yaml
"
`;

exports[`generate mtls 2`] = `
Object {
  "path": "/tmp/sds-cluster-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: cluster-cert
    tls_certificate:
      certificate_chain:
        filename: cluster-cert/cert
      private_key:
        filename: cluster-cert/key
",
}
`;

exports[`generate mtls 3`] = `
Object {
  "path": "/tmp/sds-listener-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: listener-cert
    tls_certificate:
      certificate_chain:
        filename: listener-cert/cert
      private_key:
        filename: listener-cert/key
",
}
`;

exports[`generate mtls 4`] = `
Object {
  "path": "/tmp/sds-ca-cert.yaml",
  "sdsYaml": "resources:
  - '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: ca-cert
    validation_context:
      trusted_ca:
        filename: ca-cert/ca
",
}
`;
